--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   dio: ^4.0.6
   path_provider: ^2.0.11
   shared_preferences: ^2.0.15
+  sqflite: ^2.2.0+3
+  path: ^1.8.2
 
 
 dev_dependencies:
