--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,9 @@ flutter:
     - repo/images/pig.png
     - repo/images/wolf.png
     - repo/fruit.txt
+    - repo/images/circle.png
+    - repo/images/saturn.png
+    - repo/images/sunny.png
 
 
 
